--- a/Tempo2/TypeDetailView.xaml
+++ b/Tempo2/TypeDetailView.xaml
@@ -7,8 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="White" PointerPressed="Grid_PointerPressed"
-         Padding="15" >
+    <Grid Background="White" PointerPressed="Grid_PointerPressed" >
 
         <Grid.RowDefinitions>
             <!-- Command bar and heading -->
@@ -24,26 +23,27 @@
                 
                 <!-- Show the command bar if we're the content of the Frame, or if "top level" meaning the primary content -->
                 <local:CommonCommandBar 
-                        IsBackEnabled="{x:Bind local:Utils.Or(IsRoot,IsTopLevel), Mode=OneWay}"
-                        Visibility="{x:Bind local:Utils.VisibleIfEither(IsRoot,IsTopLevel), Mode=OneWay}"
+                        IsBackEnabled="{x:Bind IsRoot, Mode=OneWay}"
+                        Visibility="{x:Bind IsRoot, Mode=OneWay}"
                         MsdnVisibility="Visible"
                         MemberVM="{x:Bind TypeVM, Mode=OneWay}" />
-                
-                <local:HeadingBar x:Name="_detailViewHeading"
+
+                <!-- Padding of 12 makes this line up with a ListView left alignment -->
+                <Border Padding="12,0,0,0">
+                    <local:HeadingBar x:Name="_detailViewHeading"
                         Heading="{x:Bind TypeVM.PrettyName, Mode=OneWay}"
                         SubHeading="{x:Bind TypeVM.Namespace, Mode=OneWay}"
                         SubSubHeading="{x:Bind TypeVM.TypeKindString, Mode=OneWay}"
                         IsPreview="{x:Bind TypeVM.IsPreview, Mode=OneWay}"
-                        IsTopLevel="{x:Bind IsTopLevel, Mode=OneWay}"
                                   Margin="{StaticResource BottomVerticalMargin}"
                         />
+                </Border>
             </StackPanel>
         </Border>
         
         <!-- Either wide or skinny mode displays at a time -->
         <!-- Wide mode shows two panes -->
         <Grid Grid.Row="1" x:Name="_wideMode" 
-              Margin="{StaticResource ContentMarginMinusHeight}" 
               Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"   />
@@ -59,7 +59,10 @@
                     IsSummaryDisabled="{x:Bind IsWide, Mode=OneWay}" />
             </Border>
 
-            <Border x:Name="_wideModeCol1" Grid.Column="1" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <Border x:Name="_wideModeCol1" Grid.Column="1" 
+                    CornerRadius="0,5,5,0"
+                    Padding="10"
+                    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
                 <!-- This starts out here, but in skinny mode will get moved to _skinnyModeCol1 -->
                 <local:TypeDetailViewTypeInfo x:Name="_typeInfo"  TypeVM="{x:Bind TypeVM, Mode=OneWay}"  />
             </Border>
