--- a/Tempo2/TypeDetailViewMembersList.xaml
+++ b/Tempo2/TypeDetailViewMembersList.xaml
@@ -4,7 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Tempo"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -59,12 +60,22 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <HyperlinkButton Click="CopyTypeDefinition" VerticalAlignment="Top" HorizontalAlignment="Right">
-            <StackPanel Orientation="Horizontal" ToolTipService.ToolTip="Copy this type definition to the clipboard">
-                <SymbolIcon Symbol="Copy"/>
-                <TextBlock x:Name="_copyText" xml:space="preserve"> copy</TextBlock>
-            </StackPanel>
-        </HyperlinkButton>
+        <!-- Use a scaling inversion on this copy button, so that when the content is being
+             zoomed up we don't zoom this button up along with it -->
+        <controls:LayoutTransformControl Grid.Row="1">
+            <controls:LayoutTransformControl.Transform>
+                <ScaleTransform ScaleX="{x:Bind Descale(local:App.Instance.ContentScaling), Mode=OneWay}"
+                                ScaleY="{x:Bind Descale(local:App.Instance.ContentScaling), Mode=OneWay}"/>
+            </controls:LayoutTransformControl.Transform>
+
+            <HyperlinkButton Click="CopyTypeDefinition" VerticalAlignment="Top" HorizontalAlignment="Right">
+                <StackPanel Orientation="Horizontal" ToolTipService.ToolTip="Copy this type definition to the clipboard">
+                    <SymbolIcon Symbol="Copy" Margin="0,0,12,0"/>
+                    <TextBlock x:Name="_copyText">copy</TextBlock>
+                </StackPanel>
+            </HyperlinkButton>
+
+        </controls:LayoutTransformControl>
 
     </Grid>
 
